--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "cannon": "^0.6.2",
     "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "three": "^0.98.0"
+    "three": "^0.98.0",
+    "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
