--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "three": "^0.98.0",
+    "three-fbx-loader": "^1.0.3",
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
