--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Montana-Code-School/sound-escape#readme",
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
     "cannon": "^0.6.2",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
