--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "concurrently \"node server.js\" \"webpack --watch\""
+    "dev": "concurrently \"node server.js\" \"webpack --watch\"",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
