--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev": "concurrently \"node server.js\" \"webpack --watch\"",
-    "start": "node server.js"
+    "start": "node server.js ",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
