--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7",
     "three": "^0.98.0",
     "three-fbx-loader": "^1.0.3",
+    "three-reflector": "^1.0.2",
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
